@@ -1,3 +1,8 @@
+2003-10-07  Don Porter  <dgp@users.sourceforge.net>
+
+        * tests/io.test:        Corrected several tests that failed when paths
+        * tests/ioCmd.test:     included regexp-special chars. [Bug 775394]
+
 2003-10-06  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* win/configure:
